// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorHead test on android renders 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
    }
  }
>
  <View
    accessibilityRole="banner"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F8F3",
          "flexDirection": "column",
          "paddingBottom": 40,
          "width": "100%",
        },
        Object {
          "paddingTop": 30,
        },
      ]
    }
  >
    <Text
      accessibilityLabel="author-name"
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#000",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
        }
      }
      testID="author-name"
    >
      
    </Text>
    <Text
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      aria-level="2"
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 14,
          },
          Object {},
        ]
      }
    >
      
    </Text>
    <View
      style={
        Object {
          "paddingBottom": 32,
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 16,
            "lineHeight": 26,
            "textAlign": "center",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`AuthorHead test on android renders with data 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
    }
  }
>
  <View
    accessibilityRole="banner"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F8F3",
          "flexDirection": "column",
          "paddingBottom": 40,
          "width": "100%",
        },
        Object {
          "paddingTop": 30,
        },
      ]
    }
  >
    <View
      aspectRatio={1}
      style={
        Array [
          Object {
            "borderColor": "#FFF",
            "marginBottom": 20,
            "marginLeft": "auto",
            "marginRight": "auto",
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 50,
            "width": 100,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Image
          onLoad={[Function]}
          source={
            Object {
              "uri": "https://feeds.thetimes.co.uk/web/imageserver/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0694e84e-04ff-11e7-976a-0b4b9a1a67a3.jpg?crop=854,854,214,0&resize=200&preview=true",
            }
          }
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": "100%",
                "width": "100%",
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Object {
                "uri": "https://feeds.thetimes.co.uk/web/imageserver/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0694e84e-04ff-11e7-976a-0b4b9a1a67a3.jpg?crop=854,854,214,0&resize=200",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": "100%",
                  "width": "100%",
                },
                undefined,
              ]
            }
          />
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flex": 1,
                },
                null,
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    "#f9f9f9",
                    "#ededed",
                  ]
                }
                end={
                  Object {
                    "x": -0.09302964577578221,
                    "y": 0.11488204504197774,
                  }
                }
                locations={
                  Array [
                    0,
                    1,
                  ]
                }
                start={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                style={
                  Array [
                    Object {
                      "flex": 1,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <Text
      accessibilityLabel="author-name"
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#000",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
        }
      }
      testID="author-name"
    >
      Carol Midgley
    </Text>
    <Text
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      aria-level="2"
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 14,
          },
          Object {},
        ]
      }
    >
      columnist
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingTop": 8,
        }
      }
    >
      <svg
        height={15}
        style={Object {}}
        viewBox="-354.2 -279.4 750 600"
        width={15}
      >
        <path
          d="M391.3-210.7c-28.9,10.9-57.8,21.7-86.7,25.3c32.5-18.1,54.2-50.6,68.7-83.1c-28.9,18.1-61.5,28.9-97.6,36.1 c-28.9-28.9-68.7-47-112-47c-83.1,0-151.8,68.7-151.8,151.8c0,10.8,0,25.3,3.6,36.1c-126.5-7.3-238.6-68.7-314.5-159 c-14.5,21.7-21.7,50.6-21.7,75.9c0,54.2,25.3,101.2,68.7,126.5c-25.3,0-47-7.2-68.7-18.1c0,0,0,0,0,3.6 c0,72.3,54.2,137.4,122.9,148.2c-14.5,3.6-25.3,3.6-39.7,3.6c-10.9,0-18.1,0-28.9-3.6c18.1,61.5,75.9,104.8,141,104.8 c-50.6,39.8-119.3,65.1-188,65.1c-10.8,0-25.3,0-36.1-3.6c68.7,43.3,148.2,68.7,234.9,68.7C167.2,320.6,319,89.3,319-113.1 c0-7.2,0-14.4,0-18.1C344.3-152.9,369.6-181.8,391.3-210.7z"
          fill="#006699"
          style={Object {}}
        />
      </svg>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        href="https://twitter.com/carolmidgley"
        onPress={[Function]}
        style={
          Array [
            Object {
              "textDecorationLine": "underline",
            },
            Object {
              "color": "#006699",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "paddingLeft": 5,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        @
        carolmidgley
      </Text>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 32,
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 16,
            "lineHeight": 26,
            "textAlign": "center",
          }
        }
      >
        Carol Midgley joined 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontStyle": "italic",
            }
          }
        >
          The Times
        </Text>
         in 1996, and won feature writer of the year in 2004. Find her Wednesday column in 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontStyle": "italic",
            }
          }
        >
          Times2
        </Text>
         each week and a weekly comment piece on Fridays.
      </Text>
    </View>
  </View>
</View>
`;

exports[`AuthorHead test on android renders without profile picture 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
    }
  }
>
  <View
    accessibilityRole="banner"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F8F3",
          "flexDirection": "column",
          "paddingBottom": 40,
          "width": "100%",
        },
        Object {
          "paddingTop": 30,
        },
      ]
    }
  >
    <Text
      accessibilityLabel="author-name"
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#000",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
        }
      }
      testID="author-name"
    >
      Carol Midgley
    </Text>
    <Text
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      aria-level="2"
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 14,
          },
          Object {},
        ]
      }
    >
      columnist
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingTop": 8,
        }
      }
    >
      <svg
        height={15}
        style={Object {}}
        viewBox="-354.2 -279.4 750 600"
        width={15}
      >
        <path
          d="M391.3-210.7c-28.9,10.9-57.8,21.7-86.7,25.3c32.5-18.1,54.2-50.6,68.7-83.1c-28.9,18.1-61.5,28.9-97.6,36.1 c-28.9-28.9-68.7-47-112-47c-83.1,0-151.8,68.7-151.8,151.8c0,10.8,0,25.3,3.6,36.1c-126.5-7.3-238.6-68.7-314.5-159 c-14.5,21.7-21.7,50.6-21.7,75.9c0,54.2,25.3,101.2,68.7,126.5c-25.3,0-47-7.2-68.7-18.1c0,0,0,0,0,3.6 c0,72.3,54.2,137.4,122.9,148.2c-14.5,3.6-25.3,3.6-39.7,3.6c-10.9,0-18.1,0-28.9-3.6c18.1,61.5,75.9,104.8,141,104.8 c-50.6,39.8-119.3,65.1-188,65.1c-10.8,0-25.3,0-36.1-3.6c68.7,43.3,148.2,68.7,234.9,68.7C167.2,320.6,319,89.3,319-113.1 c0-7.2,0-14.4,0-18.1C344.3-152.9,369.6-181.8,391.3-210.7z"
          fill="#006699"
          style={Object {}}
        />
      </svg>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        href="https://twitter.com/carolmidgley"
        onPress={[Function]}
        style={
          Array [
            Object {
              "textDecorationLine": "underline",
            },
            Object {
              "color": "#006699",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "paddingLeft": 5,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        @
        carolmidgley
      </Text>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 32,
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 16,
            "lineHeight": 26,
            "textAlign": "center",
          }
        }
      >
        Carol Midgley joined 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontStyle": "italic",
            }
          }
        >
          The Times
        </Text>
         in 1996, and won feature writer of the year in 2004. Find her Wednesday column in 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontStyle": "italic",
            }
          }
        >
          Times2
        </Text>
         each week and a weekly comment piece on Fridays.
      </Text>
    </View>
  </View>
</View>
`;
